--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ android {
     buildFeatures {
         viewBinding true
     }
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.rokudo.xpense"
         minSdk 29
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    //Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-process:2.5.1'
