impl invite notification actions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <receiver android:name=".notifications.AcceptReceiver"/>
+        <receiver android:name=".notifications.DeclineReceiver"/>
     </application>
 
 </manifest>
