--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.10'
+
     def work_manager_version = "2.8.0"
     implementation "androidx.work:work-runtime:$work_manager_version"
 
