--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ google-services.json
 # Android Profiling
 *.hprof
 app/release/app-release.aab
+app/src/main/java/com/rokudo/xpense/utils/GoCardlessUtils.java
